--- a/public/style.css
+++ b/public/style.css
@@ -35,17 +35,18 @@ h1 {
 
 #resultsHeader{
     text-align: center;
-    padding: 15px;
+    padding: 15px 0px;
+    font-size: 20px;
 }
 
 .results{
     text-align: center;
-    padding-bottom: 15px;
+    padding: 15px 0px;
+    font-size: 20px;
 }
 
 a {
     text-decoration: none;
     color:black;
     font-size: small;
-    padding-bottom: 10px;
 }
