--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,25 @@
 body {
-    background-color: #CCE3DE;
-    width: 100vw;
+    background-color: #cce3de;
+    background-image: url("https://www.transparenttextures.com/patterns/binding-dark.png");
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
 h1 {
-    background-color: #A4C3B2;
+    background-color: #6B9080;
     text-align: center;
-    width: 100vw;
     padding: 50px 0px;
     border-radius: 8px;
     margin: 15px 0px;
+}
+
+.introInfo {
+    text-align: center;
+    font-size: 20px;
+}
+
+.introInfo a{
+    color: black;
 }
 
 .input {
@@ -25,11 +34,12 @@ h1 {
     margin: 10px 3px;
 }
 .img-thumbnail {
-    border: 3px solid #EAF4F4;
+    border: 2px solid #EAF4F4;
 }
 
-.output {
-    background-color: #6B9080;
+
+.output, .introInfo {
+    background-color: #A4C3B2;
     border-radius: 8px;
 }
 
@@ -54,8 +64,13 @@ h1 {
     margin: 5px 3px;
 }
 
-a {
+.output a {
     text-decoration: none;
     color:black;
-    font-size: small;
+    font-size: 16px;
+}
+
+footer {
+    background-color: none;
+    text-align: center;
 }
